# bbin

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
bbin/: __main__.py  bbin.py  dep_resolver.py  enums.py  git.py  interface.py  json_to_obj.py  utils.py
tests/: test_bbin.py
