[tool.poetry]
name = "bbin"
version = "0.1.0"
description = ""
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
halo = "^0.0.31"
userpath = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
